Refactor : 'comment'용어를 전부 'letter'로 변경