@@ -1,20 +1,19 @@
 package com.finalproject.manitoone.service;
 
 import com.finalproject.manitoone.constants.ManitoErrorMessages;
-import com.finalproject.manitoone.util.ManitoCommentParser;
+import com.finalproject.manitoone.util.ManitoLetterParser;
 import com.finalproject.manitoone.util.TimeFormatter;
-import com.finalproject.manitoone.domain.ManitoComment;
+import com.finalproject.manitoone.domain.ManitoLetter;
 import com.finalproject.manitoone.domain.Post;
 import com.finalproject.manitoone.domain.User;
-import com.finalproject.manitoone.dto.manito.ManitoCommentRequestDto;
-import com.finalproject.manitoone.dto.manito.ManitoCommentResponseDto;
+import com.finalproject.manitoone.dto.manito.ManitoLetterRequestDto;
+import com.finalproject.manitoone.dto.manito.ManitoLetterResponseDto;
 import com.finalproject.manitoone.dto.manito.ManitoPageResponseDto;
-import com.finalproject.manitoone.repository.ManitoCommentRepository;
+import com.finalproject.manitoone.repository.ManitoLetterRepository;
 import com.finalproject.manitoone.repository.PostRepository;
 import com.finalproject.manitoone.repository.UserRepository;
 import jakarta.persistence.EntityNotFoundException;
 import jakarta.transaction.Transactional;
-import java.util.stream.Collectors;
 import lombok.RequiredArgsConstructor;
 import org.springframework.data.domain.Page;
 import org.springframework.data.domain.Pageable;
@@ -25,12 +24,12 @@ import org.springframework.stereotype.Service;
 @RequiredArgsConstructor
 public class ManitoService {
 
-  private final ManitoCommentRepository manitoCommentRepository;
+  private final ManitoLetterRepository manitoLetterRepository;
   private final PostRepository postRepository;
   private final UserRepository userRepository;
 
   // 마니또 편지 생성
-  public ManitoCommentResponseDto createReply(Long postId, ManitoCommentRequestDto requestDto,
+  public ManitoLetterResponseDto createLetter(Long postId, ManitoLetterRequestDto requestDto,
       String userNickname) {
 
     Post post = postRepository.findById(postId)
@@ -41,126 +40,126 @@ public class ManitoService {
         .orElseThrow(
             () -> new EntityNotFoundException(ManitoErrorMessages.USER_NOT_FOUND.getMessage()));
 
-    validateReplyCreation(post, user);
+    validateLetterCreation(post, user);
 
-    ManitoComment manitoComment = requestDto.toEntity(post, user);
-    ManitoComment savedComment = manitoCommentRepository.save(manitoComment);
+    ManitoLetter manitoLetter = requestDto.toEntity(post, user);
+    ManitoLetter savedLetter = manitoLetterRepository.save(manitoLetter);
 
-    return buildResponseDto(savedComment, userNickname);
+    return buildResponseDto(savedLetter, userNickname);
   }
 
   // 편지 생성 유효성 검사
-  private void validateReplyCreation(Post post, User user) {
-    if (!post.getIsManito()) {
+  private void validateLetterCreation(Post post, User user) {
+    if (Boolean.FALSE.equals(post.getIsManito())) {
       throw new IllegalStateException(ManitoErrorMessages.NOT_MANITO_POST.getMessage());
     }
 
-    if (!post.getIsSelected()) {
+    if (Boolean.FALSE.equals(post.getIsSelected())) {
       throw new IllegalStateException(ManitoErrorMessages.NOT_SELECTED_POST.getMessage());
     }
 
-    if (manitoCommentRepository.findByPostIdAndUser(post, user).isPresent()) {
+    if (manitoLetterRepository.findByPostIdAndUser(post, user).isPresent()) {
       throw new IllegalStateException(ManitoErrorMessages.ALREADY_REPLIED.getMessage());
     }
 
     if (post.getUser().equals(user)) {
-      throw new IllegalStateException(ManitoErrorMessages.OWN_POST_REPLY.getMessage());
+      throw new IllegalStateException(ManitoErrorMessages.OWN_POST_LETTER.getMessage());
     }
   }
 
-  private ManitoCommentResponseDto buildResponseDto(ManitoComment comment,
+  private ManitoLetterResponseDto buildResponseDto(ManitoLetter letter,
       String currentUserNickname) {
     User currentUser = userRepository.findUserByNickname(currentUserNickname)
         .orElseThrow(
             () -> new EntityNotFoundException(ManitoErrorMessages.USER_NOT_FOUND.getMessage()));
 
-    return ManitoCommentResponseDto.builder()
-        .manitoCommentId(comment.getManitoCommentId())
-        .content(ManitoCommentParser.extractContent(comment.getComment()))
-        .musicUrl(ManitoCommentParser.extractMusicUrl(comment.getComment()))
-        .musicComment(ManitoCommentParser.extractMusicComment(comment.getComment()))
-        .isPublic(comment.isPublic())
-        .isReport(comment.isReport())
-        .answerComment(comment.getAnswerComment())
-        .timeDiff(TimeFormatter.formatTimeDiff(comment.getCreatedAt()))
-        .isOwner(comment.isOwnedBy(currentUser))
+    return ManitoLetterResponseDto.builder()
+        .manitoLetterId(letter.getManitoLetterId())
+        .content(ManitoLetterParser.extractContent(letter.getLetter()))
+        .musicUrl(ManitoLetterParser.extractMusicUrl(letter.getLetter()))
+        .musicComment(ManitoLetterParser.extractMusicComment(letter.getLetter()))
+        .isPublic(letter.isPublic())
+        .isReport(letter.isReport())
+        .answerLetter(letter.getAnswerLetter())
+        .timeDiff(TimeFormatter.formatTimeDiff(letter.getCreatedAt()))
+        .isOwner(letter.isOwnedBy(currentUser))
         .build();
   }
 
   public ManitoPageResponseDto getReceiveManito(String nickname, Pageable pageable) {
-    Page<ManitoComment> comments = manitoCommentRepository.findByPostId_User_Nickname(nickname,
+    Page<ManitoLetter> letters = manitoLetterRepository.findByPostId_User_Nickname(nickname,
         pageable);
 
     return ManitoPageResponseDto.builder()
-        .content(comments.getContent().stream()
-            .map(comment -> buildResponseDto(comment, nickname))
-            .collect(Collectors.toList()))
-        .currentPage(comments.getNumber())
-        .totalPages(comments.getTotalPages())
-        .totalElements(comments.getTotalElements())
-        .hasNext(comments.hasNext())
+        .content(letters.getContent().stream()
+            .map(letter -> buildResponseDto(letter, nickname))
+            .toList())
+        .currentPage(letters.getNumber())
+        .totalPages(letters.getTotalPages())
+        .totalElements(letters.getTotalElements())
+        .hasNext(letters.hasNext())
         .build();
   }
 
   public ManitoPageResponseDto getSendManito(String nickname, Pageable pageable) {
-    Page<ManitoComment> comments = manitoCommentRepository.findByUser_Nickname(nickname, pageable);
+    Page<ManitoLetter> letters = manitoLetterRepository.findByUser_Nickname(nickname, pageable);
 
     return ManitoPageResponseDto.builder()
-        .content(comments.getContent().stream()
-            .map(comment -> buildResponseDto(comment, nickname))
-            .collect(Collectors.toList()))
-        .currentPage(comments.getNumber())
-        .totalPages(comments.getTotalPages())
-        .totalElements(comments.getTotalElements())
-        .hasNext(comments.hasNext())
+        .content(letters.getContent().stream()
+            .map(letter -> buildResponseDto(letter, nickname))
+            .toList())
+        .currentPage(letters.getNumber())
+        .totalPages(letters.getTotalPages())
+        .totalElements(letters.getTotalElements())
+        .hasNext(letters.hasNext())
         .build();
   }
 
 
   // 편지에 답장
-  public ManitoCommentResponseDto answerManitoReply(Long manitoCommentId, String answerComment,
+  public ManitoLetterResponseDto answerManitoLetter(Long manitoLetterId, String answerLetter,
       String userNickname) {
-    ManitoComment manitoComment = manitoCommentRepository.findById(manitoCommentId)
+    ManitoLetter manitoLetter = manitoLetterRepository.findById(manitoLetterId)
         .orElseThrow(() -> new EntityNotFoundException(
-            ManitoErrorMessages.MANITO_REPLY_NOT_FOUND.getMessage()));
+            ManitoErrorMessages.MANITO_LETTER_NOT_FOUND.getMessage()));
 
-    manitoComment.addAnswer(answerComment, userNickname);
+    manitoLetter.addAnswer(answerLetter, userNickname);
 
-    return buildResponseDto(manitoComment, userNickname);
+    return buildResponseDto(manitoLetter, userNickname);
   }
 
   // 편지 신고
-  public void reportManitoReply(Long manitoCommentId, String userNickname) {
-    ManitoComment manitoComment = manitoCommentRepository.findById(manitoCommentId)
+  public void reportManitoLetter(Long manitoLetterId, String userNickname) {
+    ManitoLetter manitoLetter = manitoLetterRepository.findById(manitoLetterId)
         .orElseThrow(() -> new EntityNotFoundException(
-            ManitoErrorMessages.MANITO_REPLY_NOT_FOUND.getMessage()));
+            ManitoErrorMessages.MANITO_LETTER_NOT_FOUND.getMessage()));
 
-    if (!manitoComment.getPostId().getUser().getNickname().equals(userNickname)) {
+    if (!manitoLetter.getPostId().getUser().getNickname().equals(userNickname)) {
       throw new IllegalStateException(ManitoErrorMessages.NO_PERMISSION_REPORT.getMessage());
     }
 
-    manitoComment.reportComment();
+    manitoLetter.reportLetter();
   }
 
   // 편지 공개 토글
-  public void toggleManitoReplyVisibility(Long manitoCommentId, String userNickname) {
-    ManitoComment manitoComment = manitoCommentRepository.findById(manitoCommentId)
+  public void toggleManitoLetterVisibility(Long manitoLetterId, String userNickname) {
+    ManitoLetter manitoLetter = manitoLetterRepository.findById(manitoLetterId)
         .orElseThrow(() -> new EntityNotFoundException(
-            ManitoErrorMessages.MANITO_REPLY_NOT_FOUND.getMessage()));
+            ManitoErrorMessages.MANITO_LETTER_NOT_FOUND.getMessage()));
 
-    if (!manitoComment.getPostId().getUser().getNickname().equals(userNickname)) {
+    if (!manitoLetter.getPostId().getUser().getNickname().equals(userNickname)) {
       throw new IllegalStateException(ManitoErrorMessages.NO_PERMISSION_VISIBILITY.getMessage());
     }
 
-    manitoComment.toggleVisibility(userNickname);
+    manitoLetter.toggleVisibility(userNickname);
   }
 
   // 답장 신고
-  public void reportManitoAnswer(Long manitoCommentId, String userNickname) {
-    ManitoComment manitoComment = manitoCommentRepository.findById(manitoCommentId)
+  public void reportManitoAnswer(Long manitoLetterId, String userNickname) {
+    ManitoLetter manitoLetter = manitoLetterRepository.findById(manitoLetterId)
         .orElseThrow(() -> new EntityNotFoundException(
-            ManitoErrorMessages.MANITO_REPLY_NOT_FOUND.getMessage()));
+            ManitoErrorMessages.MANITO_LETTER_NOT_FOUND.getMessage()));
 
-    manitoComment.reportAnswer(userNickname);
+    manitoLetter.reportAnswer(userNickname);
   }
 }
